<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ATOMs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="remain_sms">SMS Not send !</string>
    <string name="transaction">Transactions</string>
    <string name="invoice">Order List</string>
    <string name="back">Prev. Page</string>
    <string name="forword">Next Page</string>
    <string name="jumpto">Go to page?</string>

</resources>
